tests/ui/suggestions/dont-suggest-borrowing-existing-borrow.stderr
error[E0277]: the trait bound `str: From<_>` is not satisfied
  --> $DIR/dont-suggest-borrowing-existing-borrow.rs:2:14
   |
LL |     let _ = &str::from("value");
   |              ^^^ the trait `From<_>` is not implemented for `str`
   |
   = help: the following other types implement trait `From<T>`:
             `String` implements `From<&String>`
             `String` implements `From<&mut str>`
             `String` implements `From<&str>`
             `String` implements `From<Box<str>>`
             `String` implements `From<Cow<'_, str>>`
             `String` implements `From<char>`

error[E0277]: the size for values of type `str` cannot be known at compilation time
  --> $DIR/dont-suggest-borrowing-existing-borrow.rs:2:14
   |
LL |     let _ = &str::from("value");
   |              ^^^^^^^^^^^^^^^^^^ doesn't have a size known at compile-time
   |
   = help: the trait `Sized` is not implemented for `str`
   = note: the return type of a function must have a statically known size

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
